<resources>
    <string name="app_name">NA CODE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="alerdy_programmer">Already a programmer ? Click Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q_a"><![CDATA[Q & A]]></string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="code">Code</string>
    <string name="playground"><![CDATA[P & G]]></string>
    <string name="c">C Language</string>
    <string name="java">Java</string>
    <string name="cpp_app">Application :OOP\'s , Gaming Development , Applications Development</string>
    <string name="cpp">C ++ </string>
    <string name="java_app">Application :OOP\'s , Gaming Dev , Applications Dev , Web Dev , Frameworks</string>
    <string name="python">Python</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="javascript">JavaScript</string>
    <string name="firebase">Firebase</string>
    <string name="sql">SQL</string>

    <string name="section_format">Page %1$d</string>
    <string name="sample_text">How to create a list view in android studio and in xcode ,and add animation in it</string>
    <string name="sample_text_1">Web can scaled to any size and can color can be added to it , try now</string>
    <string name="na_code"><![CDATA[< NA CODE />]]></string>
    <string name="copyright">NA CODE &#169; COPYRIGHTS 2017</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="q_amp_a_form"><![CDATA[Q & A Form]]></string>
    <string name="new_feeds">New Feeds</string>
    <string name="share">Share</string>
    <string name="add_image">Add Image</string>
    <string name="post">POST</string>
    <string name="new_question">New Question</string>
    <string name="todo">TODO</string>
    <string name="create_a_post">Create a Post</string>
    <string name="enterDetails">Enter Your details here</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="question_title">Question Title</string>
    <string name="question_description">Question Description</string>
    <string name="code_optional">Code (Optional)</string>
    <string name="submit">Submit</string>
    <string name="insert_image">Insert Image</string>
    <string name="insert_img_warning">(Insert image related to the problem,please don\'t spam )</string>
    <string name="fill_dea">Please fill details</string>
    <string name="report_us">Report Us</string>
    <string name="text_case">Text case</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="web_technologies">Web Technologies</string>
    <string name="database">Database</string>
    <string name="android">Android</string>

    <string name="c_notes">C Notes</string>
    <string name="c_playground">C PlayGround</string>
    <string name="c_bookmark">C Bookmark</string>
    <string name="c_quiz">C Quiz</string>
    <string name="c_programs">C Programs</string>

    <string name="java_notes">Java Notes</string>
    <string name="java_playground">Java PlayGround</string>
    <string name="java_programs">Java Programs</string>
    <string name="java_bookmarks">Java Bookmarks</string>
    <string name="java_quiz">Java Quiz</string>

    <string name="cpp_notes">C ++ Notes</string>
    <string name="cpp_playground">C ++ PlayGround</string>
    <string name="cpp_bookmark">C ++ Bookmark</string>
    <string name="cpp_quiz">C ++ Quiz</string>
    <string name="cpp_programs">C ++ Programs</string>

    <string name="css_notes">CSS Notes</string>
    <string name="css_playground">CSS PlayGround</string>
    <string name="css_bookmark">CSS Bookmark</string>
    <string name="css_quiz">CSS Quiz</string>
    <string name="css_programs">CSS Programs</string>

    <string name="firebase_notes">Firebase Notes</string>
    <string name="firebase_playground">Firebase PlayGround</string>
    <string name="firebase_bookmark">Firebase Bookmark</string>
    <string name="Firebase_quiz">Firebase Quiz</string>
    <string name="Firebase_programs">Firebase Programs</string>

    <string name="sql_notes">SQL Notes</string>
    <string name="sql_playground">SQL PlayGround</string>
    <string name="sql_bookmark">SQL Bookmark</string>
    <string name="sql_quiz">SQL Quiz</string>
    <string name="sql_programs">SQL Programs</string>

    <string name="php_notes">PHP Notes</string>
    <string name="php_playground">PHP PlayGround</string>
    <string name="php_bookmark">PHP Bookmark</string>
    <string name="php_quiz">PHP Quiz</string>
    <string name="php_programs">PHP Programs</string>
    <string name="title_activity_programming_lang_c__notes_view">ProgrammingLangC_NotesView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="programs"> Programs </string>
    <string name="difficulty_level">Difficulty Level  </string>
    <string name="easy">Easy</string>
    <string name="topics">Topics  </string>
    <string name="varibles_operators"><![CDATA[Varibles & Operators]]></string>
    <string name="flow_of_control">Flow of Control</string>
    <string name="medium">Medium</string>
    <string name="scope_blocks"><![CDATA[Scope & Blocks]]></string>
    <string name="arrays_strings"><![CDATA[Arrays & Strings]]></string>
    <string name="hard">Hard</string>
    <string name="graphics">Graphics</string>
    <string name="lorem">C is a general-purpose, high-level language that was originally developed by Dennis M. Ritchie
to develop the UNIX operating system at Bell Labs. C was originally first implemented on the
DEC PDP-11 computer in 1972.
In 1978, Brian Kernighan and Dennis Ritchie produced the first publicly available description
of C, now known as the K&amp;R standard.
The UNIX operating system, the C compiler, and essentially all UNIX application programs
have been written in C. C has now become a widely used professional language for various
reasons:</string>

    <!-- C Notes -->
    <string name="introduction">Introduction</string>
    <string name="variables">Variables</string>
    <string name="operators">Operators</string>
    <string name="input_amp_output"><![CDATA[Input & Output]]></string>
    <string name="decision_making_in_c">Decision Making in C</string>
    <string name="loops">Loops</string>
    <string name="functions">Functions</string>
    <string name="arrays">Arrays</string>
    <string name="pointers">Pointers</string>
    <string name="structures">Structures</string>
    <string name="union">Union</string>
    <string name="scope">Scope</string>
    <string name="file_operations_and_functions">File Operations And Functions</string>
    <string name="c_preprocessor_directives">C Preprocessor Directives</string>
    <string name="header_files">Header Files</string>
    <string name="copy">copy</string>


    <string name="basic_c_langauge_test">Basic C langauge Test</string>
    <string name="average_score">Average Score</string>
    <string name="_6">6</string>
    <string name="introduction_to_decision_making_and_looping_test">Introduction to Decision making and Looping test</string>
    <string name="introduction_to_array_in_c_test">Introduction to Array in C test</string>
    <string name="function_concept_in_c">Function Concept in C</string>
    <string name="introduction_to_pointers_in_c">Introduction to Pointers in C</string>
    <string name="structure_basic_concepts_in_c">Structure Basic Concepts in C</string>
    <string name="c_programming_mcq_s">C Programming MCQ\'s</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="option_1">Option 1</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="progress">Progress :</string>
    <string name="loading">Loading .....</string>
    <string name="create_a_new_p_amp_g"><![CDATA[Create a New P&G]]></string>
    <string name="playground_full">PlayGround</string>
    <string name="ok">OK</string>
    <string name="ask_me_anything">Ask me Anything</string>
    <string name="trending_quires">Trending Quires</string>
    <string name="p_amp_g"><![CDATA[p & g]]></string>
    <string name="quiz">Quiz</string>
    <string name="notes">Notes</string>
    <string name="bargin_storstup">Bargin Storstup</string>
    <string name="applications_mobile_dev_game_dev_os_dev">Applications : Mobile dev , Game Dev , OS Dev</string>
    <string name="view_all">View All</string>
    <string name="application">Application</string>
    <string name="added_to_bookmarks">Added to Bookmarks</string>


</resources>
