<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_gradeint"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/login"
                    android:textColor="@color/whiteColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:lines="1"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="@string/hint_email"
                    android:textColor="@color/whiteColor"
                    android:theme="@style/MyEditText" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:lines="1"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/whiteColor"
                    android:theme="@style/MyEditText" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/redPink" />


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:clickable="true"
                    android:id="@+id/gotosign"
                    android:text="@string/alerdy_programmer"
                    android:textColor="@color/whiteColor"
                    android:focusable="true" />



            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="40dp"
                android:background="@color/darkGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="130dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/circlebuttongoogel"
                    android:src="@drawable/gmail" />

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="90dp"
                    android:background="@drawable/circlebuttonfb"
                     />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>