<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgrammingLang.ProgrammingLangJava"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrey"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/code3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/java"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/programing_lang_notes"
                        />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkGrey"
                        android:layout_marginStart="25dp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/java_notes"
                        android:textColor="@color/darkGrey"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/programing_lang_pg"
                        />
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkGrey"
                        android:layout_marginStart="25dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="25dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/java_playground"
                        android:textColor="@color/darkGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/programing_lang_code"
                        />
                    <View
                        android:layout_height="match_parent"
                        android:layout_width="2dp"
                        android:layout_marginStart="15dp"
                        android:background="@color/darkGrey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/java_programs"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/darkGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/programing_lang_bookmark"
                        />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkGrey"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="25dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/java_bookmarks"
                        android:textColor="@color/darkGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/programing_lang_quiz"
                        />
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkGrey"
                        android:layout_marginStart="20dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="25dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/java_quiz"
                        android:textColor="@color/darkGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>